[package]
name = "sxwnl4rust"
version = "0.1.2"
authors = ["johnhelf <johnhelf@gmail.com>"]
edition = "2024"
description = "寿星万年历的rust版本"
license = "MIT"
repository = "https://github.com/johnhelf/sxwnl4rust"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
lazy_static = "1.5.0"